build: Fix clang build

https://gitlab.gnome.org/GNOME/vte/issues/178